# electronic_scale

./: .clangd  .gitignore  CMakeLists.txt  Makefile  auto_cal.txt  config.env  config.ini  config_plusethernet.ini  kconfigs_projbuild.in  ldgen_libraries  log.txt  notepad_key.txt  partitions.csv  project_description.json  sdkconfig  sdkconfig.old  server.txt  standardweight.txt  version.md
main/: ASCFont.h  CMakeLists.txt  KSFont.h  ads1232.c  ads1232.h  component.mk  file_server.c  file_server.h  hangle.c  hangle.h  http.c  http.c.bak  http.h  intro.c  intro.h  intro.h.bak  main.c  main.c.bak  mfrc522.c  mfrc522.c.bak  mfrc522.h  scspiffs.c  scspiffs.h  serialLED.c  serialLED.h  sntp.c  sntp.h  tft.c  tft.c.bak  tft.h  tft_data.c  tft_data.h  ui_cali.c  ui_cali.h  ui_fail.c  ui_fail.h  ui_wifi_scan.c  ui_wifi_scan.h  upload_script.html  version.md  (+4 more)
main/color/: color.c  color.h  hsv.h  rgb.h
main/eve/: EVE.h  EVE_commands.c  EVE_commands.h  EVE_config.h  EVE_target.c  EVE_target.h
main/eve5/: EVE_commands.c  EVE_config.h  EVE_target.h
main/img/SampleApp/Hdr/: App.h
main/img/SampleApp/Src/: App.c  stable_60x30_ARGB1555.c  u_60x30_ARGB1555.c  zer_60x30_ARGB1555.c
main/img/SampleApp/common/application/: Common.c  FileTransfer.h  FlashHelper.c  FlashHelper.h  Gesture.c  Gesture.h  Logo.h  Maths.c
main/img/SampleApp/common/eve_hal/: EVE_CoCmd_IO.c  EVE_CoCmd_Widgets.c  EVE_GpuDefs.h  EVE_GpuDefs_BT81X.c  EVE_GpuDefs_FT80X.c  EVE_HalDefs.h  EVE_HalImpl_BT8XXEMU.c  EVE_HalImpl_BT8XXEMUC.c  EVE_HalImpl_FT4222.c  EVE_HalImpl_MULTI.c  EVE_ILI9488.h  EVE_Platform.h  (+2 more)
(+120 files in other folders)
